--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ body {
   max-width: 320px;
 }
 
-nav {
+.menu {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -75,4 +75,24 @@ h3 {
   text-align: center;
   font-family: 'Libre Franklin', sans-serif;
   font-weight: 500;
+}
+
+footer {
+  background-color: #000;
+  font-family: 'Libre Franklin', sans-serif;
+  font-size: 16px;
+  color: #fff;
+  padding: 20px;
+}
+
+footer h2 {
+  font-family: 'Sorts Mill Goudy', serif;
+  font-size: 20px;
+  line-height: 1.2;
+  margin-bottom: 2px;
+}
+
+.footer-nav {
+  display: flex;
+  flex-direction: column;
 }
