--- a/css/main.css
+++ b/css/main.css
@@ -7,9 +7,14 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  font-family: 'Libre Franklin', sans-serif;
+  font-family: "Libre Franklin", sans-serif;
   font-size: 16px;
   padding: 15px;
+}
+
+.header {
+  padding: 20px;
+  border: none;
 }
 
 img {
@@ -22,15 +27,15 @@ img {
   border-radius: 40px;
   font-size: 11px;
   font-weight: 700;
-  font-family: 'Libre Franklin', sans-serif;
+  font-family: "Libre Franklin", sans-serif;
   padding: 5px;
-  margin: 20px 90px;
+  margin: 20px 80px;
   text-transform: uppercase;
   color: #fff;
 }
 
 header h2 {
-  font-family: 'Sorts Mill Goudy', serif;
+  font-family: "Sorts Mill Goudy", serif;
   font-size: 24px;
   line-height: 1.2;
 }
@@ -40,7 +45,7 @@ header {
 }
 
 .jerelle-guy {
-  font-family: 'Libre Franklin', sans-serif;
+  font-family: "Libre Franklin", sans-serif;
   font-size: 16px;
   font-weight: 700;
   text-transform: uppercase;
@@ -52,7 +57,7 @@ main {
 }
 
 .category-this-week {
-  font-family: 'Sorts Mill Goudy', serif;
+  font-family: "Sorts Mill Goudy", serif;
   font-size: 20px;
   font-weight: 700;
   line-height: 1.2;
@@ -73,20 +78,20 @@ h3 {
   font-size: 20px;
   line-height: 1.2;
   text-align: center;
-  font-family: 'Libre Franklin', sans-serif;
+  font-family: "Libre Franklin", sans-serif;
   font-weight: 500;
 }
 
 footer {
   background-color: #000;
-  font-family: 'Libre Franklin', sans-serif;
+  font-family: "Libre Franklin", sans-serif;
   font-size: 16px;
   color: #fff;
   padding: 20px;
 }
 
 footer h2 {
-  font-family: 'Sorts Mill Goudy', serif;
+  font-family: "Sorts Mill Goudy", serif;
   font-size: 20px;
   line-height: 1.2;
   margin-bottom: 2px;
